WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190089
[css-grid] gap is not honored with collapsed tracks (due to auto-fit) and align-items center or end
https://bugs.webkit.org/show_bug.cgi?id=190089
Summary
[css-grid] gap is not honored with collapsed tracks (due to auto-fit) and ali...
Oriol Brufau
Reported
2018-09-28 14:11:39 PDT
Gutters adjacent to collapsed tracks decrease the end position of grid areas in the previous track. Therefore, when the grid items are aligned to the center or end, they are shifted incorrectly. Examples:
https://codepen.io/anon/pen/qMeQMQ
,
https://codepen.io/mrego/pen/XVvNom
Works on Firefox. Has been fixed in Blink:
https://bugs.chromium.org/p/chromium/issues/detail?id=801881
Attachments
Patch
(5.82 KB, patch)
2018-09-28 14:31 PDT
,
Oriol Brufau
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews116 for mac-sierra
(1.22 MB, application/zip)
2018-09-28 15:47 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews102 for mac-sierra
(2.22 MB, application/zip)
2018-09-28 15:48 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews106 for mac-sierra-wk2
(2.03 MB, application/zip)
2018-09-28 16:00 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews205 for win-future
(13.20 MB, application/zip)
2018-09-28 17:12 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(1.31 MB, application/zip)
2018-09-28 19:48 PDT
,
EWS Watchlist
no flags
Details
Patch
(6.04 KB, patch)
2018-09-29 03:41 PDT
,
Oriol Brufau
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Oriol Brufau
Comment 1
2018-09-28 14:31:05 PDT
Comment hidden (obsolete)
Created
attachment 351112
[details]
Patch
EWS Watchlist
Comment 2
2018-09-28 15:47:28 PDT
Comment hidden (obsolete)
Comment on
attachment 351112
[details]
Patch
Attachment 351112
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/9386091
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 3
2018-09-28 15:47:29 PDT
Comment hidden (obsolete)
Created
attachment 351128
[details]
Archive of layout-test-results from ews116 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4
2018-09-28 15:47:59 PDT
Comment hidden (obsolete)
Comment on
attachment 351112
[details]
Patch
Attachment 351112
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/9386437
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 5
2018-09-28 15:48:01 PDT
Comment hidden (obsolete)
Created
attachment 351129
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-09-28 15:59:59 PDT
Comment hidden (obsolete)
Comment on
attachment 351112
[details]
Patch
Attachment 351112
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9386623
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 7
2018-09-28 16:00:01 PDT
Comment hidden (obsolete)
Created
attachment 351133
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8
2018-09-28 17:12:01 PDT
Comment hidden (obsolete)
Comment on
attachment 351112
[details]
Patch
Attachment 351112
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/9387466
New failing tests: fast/repaint/align-self-overflow-change.html imported/blink/fast/text-autosizing/grid-dbcat.html fast/repaint/align-self-change.html ietestcenter/css3/grid/grid-items-004.htm imported/blink/fast/css-grid-layout/grid-item-before-anonymous-child-crash.html ietestcenter/css3/grid/grid-columns-001.htm fast/repaint/justify-items-legacy-change.html fast/repaint/justify-self-change.html ietestcenter/css3/grid/grid-items-001.htm ietestcenter/css3/grid/grid-items-003.htm fast/repaint/align-items-overflow-change.html ietestcenter/css3/grid/grid-items-002.htm ietestcenter/css3/grid/display-grid-001.htm ietestcenter/css3/grid/display-grid-002.htm imported/blink/fast/css-grid-layout/grid-add-item-with-positioned-items.html ietestcenter/css3/grid/grid-items-005.htm fast/forms/fieldset/fieldset-grid.html fast/repaint/justify-self-overflow-change.html imported/blink/fast/css-grid-layout/stale-grid-layout-2.html fast/repaint/justify-items-overflow-change.html
EWS Watchlist
Comment 9
2018-09-28 17:12:13 PDT
Comment hidden (obsolete)
Created
attachment 351146
[details]
Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
EWS Watchlist
Comment 10
2018-09-28 19:48:30 PDT
Comment hidden (obsolete)
Comment on
attachment 351112
[details]
Patch
Attachment 351112
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/9388734
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 11
2018-09-28 19:48:31 PDT
Comment hidden (obsolete)
Created
attachment 351164
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Oriol Brufau
Comment 12
2018-09-29 03:41:47 PDT
Created
attachment 351177
[details]
Patch
Oriol Brufau
Comment 13
2018-09-29 03:46:32 PDT
I found some code that used isEmptyAutoRepeatTrack without seemingly checking hasAutoRepeatEmptyTracks beforehand, so I thought it wasn't necessary in WebKit. I just didn't look properly. I have fixed the patch.
Manuel Rego Casasnovas
Comment 14
2018-09-29 04:45:52 PDT
Comment on
attachment 351177
[details]
Patch Thanks for porting this. LGTM.
WebKit Commit Bot
Comment 15
2018-09-29 05:11:24 PDT
Comment on
attachment 351177
[details]
Patch Clearing flags on attachment: 351177 Committed
r236643
: <
https://trac.webkit.org/changeset/236643
>
WebKit Commit Bot
Comment 16
2018-09-29 05:11:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 17
2018-09-29 05:12:33 PDT
<
rdar://problem/44886192
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug