[css-grid] Properly align items next to collapsed tracks with gutters https://bugs.webkit.org/show_bug.cgi?id=190089

Patch by Oriol Brufau <obrufau@igalia.com> on 2018-09-29
Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

Import grid-gutters-013.html and reference from WPT.

Test: imported/w3c/web-platform-tests/css/css-grid/alignment/grid-gutters-013.html

* web-platform-tests/css/css-grid/alignment/grid-gutters-013-expected.xht: Added.
* web-platform-tests/css/css-grid/alignment/grid-gutters-013.html: Added.

Source/WebCore:

gridAreaPositionForInFlowChild could return a wrong end position for
grid items adjacent to a collapsed track, because it didn't take into
account that gutters collapse in that case. Therefore, "center" or
"end" alignments displayed the item at the wrong position.

Test: imported/w3c/web-platform-tests/css/css-grid/alignment/grid-gutters-013.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::gridAreaPositionForInFlowChild const):

Canonical link: https://commits.webkit.org/205072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236643 268f45cc-cd09-0410-ab3c-d52691b4dbfc